add catalog title on page

--- a/src/catalog/SHLP.html
+++ b/src/catalog/SHLP.html
@@ -39,7 +39,7 @@
 						</div>
 						<div class="header__item">
 							<h3 class="header__link">Каталог</h3>
-							<div class="header__second-list">
+							<div class="header__second-list" id="headerCatalog">
 								<a href="../catalog.html" class="header__second-link">ВЕСЬ КАТАЛОГ</a>
 								<a href="#" class="header__second-link">ГОТОВЫЕ РЕШЕНИЯ</a>
 								<a href="#" class="header__second-link">ОБОРУДОВАНИЕ В НАЛИЧИИ</a>
@@ -102,7 +102,7 @@
 						<ol class="breadcrumb">
 							<li class="breadcrumb-item"><a href="../index.html">Главная</a></li>
 							<li class="breadcrumb-item"><a href="../catalog.html">Каталог</a></li>
-							<li class="breadcrumb-item active" aria-current="page">Example</li>
+							<li class="breadcrumb-item active" aria-current="page">Шелби Луп</li>
 						</ol>
 					</nav>
 				</div>
@@ -113,10 +113,9 @@
 				<section class="products">
 					<div class="container">
 						<div class="produsts__text">
-							<h2 class="products__title">Большие канатные комплексы «Шелби Ривер»</h2>
+							<h2 class="products__title"> Большие канатные башни Шелби Луп</h2>
 							<h3 class="products__subtitle">
-								<p>Серия «Шелби Ривер» – идеальное решение для больших игровых пространств в парках, скверах, на придомовых территориях. В моделях этой серии плоская или объемная канатная сетка с множеством игровых элементов занимает центральное место на игровой площадке.</p>
-								<p>С помощью канатных комплексов «Шелби Ривер» можно разнообразить занятия спортом, сделать игру увлекательной и интересной, помочь детям проявить фантазию.</p>
+								<p>Серия Loop – идеальное решение для больших игровых пространств в парках, скверах, придомовых территориях. Здесь высокие канатные башни со множеством уровней занимает центральное место на игровой площадке. С помощью канатных башенных комплексов этой серии можно разнообразить занятия спортом, сделать игру увлекательной и интересной, помочь детям проявить фантазию. От высоты канатных башен захватывает дух.</p>
 							</h3>
 						</div>
 						<div class="products__prompt">
@@ -336,29 +335,9 @@
 						<a href="#" class="footer-links__link">Контакты</a>
 						<a href="#" class="footer-links__link">Карта сайта</a>
 					</div>
-					<div class="col-12 col-sm-6 col-lg-3 footer-links__row">
+					<div class="col-12 col-sm-6 col-lg-3 footer-links__row" id="footerCatalog">
 						<h4 class="footer-links__title">Оборудование</h4>
 						<a href="#" class="footer-links__link footer-links__link-active">Оборудование в наличии</a>
-						<a href="#" class="footer-links__link">Ривер</a>
-						<a href="#" class="footer-links__link">Плэй</a>
-						<a href="#" class="footer-links__link">Атом</a>
-						<a href="#" class="footer-links__link">Скат</a>
-						<a href="#" class="footer-links__link">НЛО</a>
-						<a href="#" class="footer-links__link">Модуль</a>
-						<a href="#" class="footer-links__link">Кубикс</a>
-						<a href="#" class="footer-links__link">Глобус</a>
-						<a href="#" class="footer-links__link">Пирамиды</a>
-						<a href="#" class="footer-links__link">Динамикс</a>
-						<a href="#" class="footer-links__link">Легно (Робиния)</a>
-						<a href="#" class="footer-links__link">Лаго</a>
-						<a href="#" class="footer-links__link">Инди</a>
-						<a href="#" class="footer-links__link">Эни</a>
-						<a href="#" class="footer-links__link">Луп</a>
-						<a href="#" class="footer-links__link">Апекс</a>
-						<a href="#" class="footer-links__link">Форс</a>
-						<a href="#" class="footer-links__link">Монстерс</a>
-						<a href="#" class="footer-links__link">Вотер Вэйс</a>
-						<a href="#" class="footer-links__link">Арки</a>
 					</div>
 					<div class="col-12 col-sm-6 col-lg-3 footer-links__row">
 						<h4 class="footer-links__title">Доп. оборудование и материалы</h4>
