--- a/src/html/catalog/catalog_footer.html
+++ b/src/html/catalog/catalog_footer.html
@@ -26,29 +26,9 @@
 					<a href="#" class="footer-links__link">Контакты</a>
 					<a href="#" class="footer-links__link">Карта сайта</a>
 				</div>
-				<div class="col-12 col-sm-6 col-lg-3 footer-links__row">
+				<div class="col-12 col-sm-6 col-lg-3 footer-links__row" id="footerCatalog">
 					<h4 class="footer-links__title">Оборудование</h4>
 					<a href="#" class="footer-links__link footer-links__link-active">Оборудование в наличии</a>
-					<a href="#" class="footer-links__link">Ривер</a>
-					<a href="#" class="footer-links__link">Плэй</a>
-					<a href="#" class="footer-links__link">Атом</a>
-					<a href="#" class="footer-links__link">Скат</a>
-					<a href="#" class="footer-links__link">НЛО</a>
-					<a href="#" class="footer-links__link">Модуль</a>
-					<a href="#" class="footer-links__link">Кубикс</a>
-					<a href="#" class="footer-links__link">Глобус</a>
-					<a href="#" class="footer-links__link">Пирамиды</a>
-					<a href="#" class="footer-links__link">Динамикс</a>
-					<a href="#" class="footer-links__link">Легно (Робиния)</a>
-					<a href="#" class="footer-links__link">Лаго</a>
-					<a href="#" class="footer-links__link">Инди</a>
-					<a href="#" class="footer-links__link">Эни</a>
-					<a href="#" class="footer-links__link">Луп</a>
-					<a href="#" class="footer-links__link">Апекс</a>
-					<a href="#" class="footer-links__link">Форс</a>
-					<a href="#" class="footer-links__link">Монстерс</a>
-					<a href="#" class="footer-links__link">Вотер Вэйс</a>
-					<a href="#" class="footer-links__link">Арки</a>
 				</div>
 				<div class="col-12 col-sm-6 col-lg-3 footer-links__row">
 					<h4 class="footer-links__title">Доп. оборудование и материалы</h4>
