--- a/src/html/catalog/catalog_header.html
+++ b/src/html/catalog/catalog_header.html
@@ -20,7 +20,7 @@
 					</div>
 					<div class="header__item">
 						<h3 class="header__link">Каталог</h3>
-						<div class="header__second-list">
+						<div class="header__second-list" id="headerCatalog">
 							<a href="../catalog.html" class="header__second-link">ВЕСЬ КАТАЛОГ</a>
 							<a href="#" class="header__second-link">ГОТОВЫЕ РЕШЕНИЯ</a>
 							<a href="#" class="header__second-link">ОБОРУДОВАНИЕ В НАЛИЧИИ</a>
