--- a/src/html/catalog/catalog_product.html
+++ b/src/html/catalog/catalog_product.html
@@ -9,18 +9,18 @@
 			<div class="product__images">
 				<div class="swiper-wrapper">
 					<!-- Slides -->
-					<div class="swiper-slide" style="width:100%; height:100%;">
-						<img src="../img/catalog/SHR/SHR0001/1.jpg" alt="">
+					<!-- <div class="swiper-slide" style="width:100%; height:100%;">
+						<img src="../img/catalog/SHR/SHR0002/1.jpg" alt="">
 					</div>
 					<div class="swiper-slide" style="width:100%; height:100%;">
-						<img src="../img/catalog/SHR/SHR0001/2.jpg" alt="">
+						<img src="../img/catalog/SHR/SHR0002/2.jpg" alt="">
 					</div>
 					<div class="swiper-slide" style="width:100%; height:100%;">
-						<img src="../img/catalog/SHR/SHR0001/3.jpg" alt="">
+						<img src="../img/catalog/SHR/SHR0002/3.jpg" alt="">
 					</div>
 					<div class="swiper-slide" style="width:100%; height:100%;">
-						<img src="../img/catalog/SHR/SHR0001/4.jpg" alt="">
-					</div>
+						<img src="../img/catalog/SHR/SHR0002/4.jpg" alt="">
+					</div> -->
 				</div>
 				<!-- If we need navigation buttons -->
 				<div class="swiper-button-prev"></div>
@@ -28,21 +28,17 @@
 
 			</div>
 			<div class="product__descriptions desc">
-				<h4 class="desc__title"> Игровой канатный комплекс</h4>
-				<h5 class="desc__article"> Арт. SHR0001</h5>
+				<h4 class="desc__title"></h4>
+				<h5 class="desc__article"></h5>
 				<a href="#buy" class="desc__price popup-link">Запрос цены</a>
 				<div class="desc__text">
 					<div class="desc__options">
 						<ul>
-							<li>Габаритные размеры: 11 460x11 325x2 770 мм</li>
-							<li>Возрастная группа: с 5 до 14 лет</li>
-							<li>Высота максимального падения: 2 770 мм</li>
-							<li>Размер зоны приземления: для сыпучих материалов – 16 160x16 025 мм, для синтетического покрытия – 16 160x16 025 мм</li>
+							
 						</ul>
 					</div>
 					<div class="desc__descriptions">
-						<p>Канатная конструкция «Шелби Ривер» для детских площадок. Габариты — 11 460x11 325x2 770 мм. Изготавливается из армированного 6-прядного каната диаметром 16 мм. Конструкция имеет различные игровые элементы: канатный переход в форме трубы, полосу препятствия с круглыми резиновыми сидениями, которые используются как ногоступы, а также канатную сетку для лазания в форме воронки.</p>
-						<p>Конструкция изготовлена из следующих материалов: металлическая рама из электросварных труб диаметрами 219х6 и 133х4,5 мм; канат армированный 6-прядный диаметром 16 мм из полипропиленовых нитей и стальной проволоки. Х-образные и Т-образные соединения каната цельнолитые, выполнены из полиамида (PA6), обжимные гильзы из алюминиевого сплава. Подвесные сиденья выполнены из термоэластопласта, армированного алюминиевой закладной. Металлическая рама конструкции оцинкованная, с порошковым покрытием.</p>
+						
 					</div>
 				</div>
 			</div>
