--- a/src/html/buttons.html
+++ b/src/html/buttons.html
@@ -35,3 +35,7 @@
 		</div>
 	</div>
 </div>
+
+<!-- <div class="cart" id="buyCart">
+	<a href="#buy"><img src="@img/shoppingCart.svg" alt=""></a>
+</div> -->
