--- a/src/html/catalog/catalog_header.html
+++ b/src/html/catalog/catalog_header.html
@@ -14,19 +14,19 @@
 						<h3 class="header__link">Компания</h3>
 						<div class="header__second-list">
 							<a href="../company.html" class="header__second-link">О компании</a>
-							<a href="#" class="header__second-link">Новости</a>
-							<a href="#" class="header__second-link">Проекты</a>
+							<!-- <a href="#" class="header__second-link">Новости</a>
+							<a href="#" class="header__second-link">Проекты</a> -->
 						</div>
 					</div>
 					<div class="header__item">
 						<h3 class="header__link">Каталог</h3>
 						<div class="header__second-list" id="headerCatalog">
 							<a href="../catalog.html" class="header__second-link">ВЕСЬ КАТАЛОГ</a>
-							<a href="#" class="header__second-link">ГОТОВЫЕ РЕШЕНИЯ</a>
-							<a href="#" class="header__second-link">ОБОРУДОВАНИЕ В НАЛИЧИИ</a>
+							<!-- <a href="#" class="header__second-link">ГОТОВЫЕ РЕШЕНИЯ</a> -->
+							<a href="../equipment.html" class="header__second-link">ОБОРУДОВАНИЕ В НАЛИЧИИ</a>
 						</div>
 					</div>
-					<div class="header__item">
+					<!-- <div class="header__item">
 						<h3 class="header__link">Дополнительное оборудование</h3>
 						<div class="header__second-list">
 							<a href="#" class="header__second-link">О компании</a>
@@ -35,7 +35,7 @@
 							<a href="#" class="header__second-link">О компании</a>
 							<a href="#" class="header__second-link">О компании</a>
 						</div>
-					</div>
+					</div> -->
 					<div class="header__item">
 						<a href="../partners.html">
 							<h3 class="header__link header__second-link">Для проектировщиков и госучреждений</h3>
@@ -46,7 +46,7 @@
 						<div class="header__second-list">
 							<a href="../delivery.html" class="header__second-link">Доставка</a>
 							<a href="../mounting.html" class="header__second-link">Монтаж</a>
-							<a href="#" class="header__second-link">Материалы</a>
+						<!-- 	<a href="#" class="header__second-link">Материалы</a> -->
 							<a href="../safety.html" class="header__second-link">Безопасность</a>
 						</div>
 					</div>
