--- a/src/html/catalog/catalog_product.html
+++ b/src/html/catalog/catalog_product.html
@@ -62,7 +62,7 @@
 				<h3 class="cart__title">Ваш заказ</h3>
 
 				<div class="cart__products">
-					<div class="cart__product">
+				<!-- 	<div class="cart__product">
 						<div class="cart__preview">
 							<img src="../@img/catalog/SHR/SHR0001/1.jpg" alt="">
 						</div>
@@ -73,15 +73,15 @@
 							</div>
 
 							<div class="cart__amount">
-								<button id="amountPlus"><img src="../@img/catalog/arrows_circle_plus.svg" alt=""></button>
+								<button class="amountPlus"><img src="../@img/catalog/arrows_circle_plus.svg" alt=""></button>
 								<p class="amount__Score">1</p>
-								<button id="amountMinus"><img src="../@img/catalog/arrows_circle_minus.svg" alt=""></button>
+								<button class="amountMinus"><img src="../@img/catalog/arrows_circle_minus.svg" alt=""></button>
 							</div>
 
 							<button class="cart__remove"><img src="../@img/catalog/arrows_circle_remove.svg" alt=""></button>
 							
 						</div>
-					</div>
+					</div> -->
 				</div>
 
 				<div class="cart__form">
