--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -28,10 +28,10 @@
 				</div>
 				<div class="col-12 col-sm-6 col-lg-3 footer-links__row" id="footerCatalog">
 					<h4 class="footer-links__title">Оборудование</h4>
-					<a href="#" class="footer-links__link footer-links__link-active">Оборудование в наличии</a>
+					<a href="equipment.html" class="footer-links__link footer-links__link-active">Оборудование в наличии</a>
 					
 				</div>
-				<div class="col-12 col-sm-6 col-lg-3 footer-links__row">
+				<!-- <div class="col-12 col-sm-6 col-lg-3 footer-links__row">
 					<h4 class="footer-links__title">Доп. оборудование и материалы</h4>
 					<a href="#" class="footer-links__link">Качели</a>
 					<a href="#" class="footer-links__link">Карусели</a>
@@ -49,7 +49,7 @@
 					<a href="#" class="footer-links__link">Музыка и интерактив</a>
 					<a href="#" class="footer-links__link">Оптические иллюзии</a>
 					<a href="#" class="footer-links__link">Песочницы</a>
-				</div>
+				</div> -->
 				<div class="col-12 col-sm-6 col-lg-3 footer-links__row">
 					<h4 class="footer-links__title">Подписаться на рассылку</h4>
 					<form action="#" method="post" class="footer-links__sending sending">
