--- a/src/html/buttons.html
+++ b/src/html/buttons.html
@@ -36,6 +36,6 @@
 	</div>
 </div>
 
-<!-- <div class="cart" id="buyCart">
-	<a href="#buy"><img src="@img/shoppingCart.svg" alt=""></a>
-</div> -->
+<div class="cart none" id="buyCart">
+	<a href="#buy" class="popup-link"><img src="@img/shoppingCart.svg" alt=""></a>
+</div>
