--- a/src/partners.html
+++ b/src/partners.html
@@ -177,6 +177,7 @@
 		</main>
 		@@include('html/footer.html', {})
 		@@include('html/calculation.html', {})
+		@@include('html/catalog/catalog_product.html', {})
 		@@include('html/buttons.html', {})
 	</div>
 	@@include('html/scripts.html', {})
