--- a/src/index.html
+++ b/src/index.html
@@ -252,6 +252,7 @@
 		</main>
 		@@include('html/footer.html', {})
 		@@include('html/calculation.html', {})
+		@@include('html/catalog/catalog_product.html', {})
 		@@include('html/buttons.html', {})
 	</div>
 	<script src="js/typed.min.js"></script>
