--- a/src/mounting.html
+++ b/src/mounting.html
@@ -79,6 +79,7 @@
 		</main>
 		@@include('html/footer.html', {})
 		@@include('html/calculation.html', {})
+		@@include('html/catalog/catalog_product.html', {})
 		@@include('html/buttons.html', {})
 	</div>
 	@@include('html/scripts.html', {})
