pre-final update

--- a/src/html/catalog/catalog_footer.html
+++ b/src/html/catalog/catalog_footer.html
@@ -3,8 +3,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12 col-lg-6">
-					<a href="tel:+74993905007" class="tel">+7 (499) 390-50-07</a>
-					<a href="mailto:hello@shelby-ltd.ru" class="mail">hello@shelby-ltd.ru</a>
+					<a href="tel:+" class="tel">+7 (999) 999-99-99</a>
+					<a href="mailto:" class="mail">hello@shelby-ltd.ru</a>
 					<p>Работаем с понедельника по пятницу с 09.00 до 18.00</p>
 				</div>
 			</div>
@@ -30,25 +30,7 @@
 					<h4 class="footer-links__title">Оборудование</h4>
 					<a href="../equipment.html" class="footer-links__link footer-links__link-active">Оборудование в наличии</a>
 				</div>
-				<!-- <div class="col-12 col-sm-6 col-lg-3 footer-links__row">
-					<h4 class="footer-links__title">Доп. оборудование и материалы</h4>
-					<a href="#" class="footer-links__link">Качели</a>
-					<a href="#" class="footer-links__link">Карусели</a>
-					<a href="#" class="footer-links__link">Качалки на пружине</a>
-					<a href="#" class="footer-links__link">Качалки-балансиры</a>
-					<a href="#" class="footer-links__link">Додекаэдры</a>
-					<a href="#" class="footer-links__link">Воркаут</a>
-					<a href="#" class="footer-links__link">Резиновое покрытие</a>
-					<a href="#" class="footer-links__link">Тарзанки и монорельсы</a>
-					<a href="#" class="footer-links__link">Уличная мебель</a>
-					<a href="#" class="footer-links__link">Для партнёров</a>
-					<a href="#" class="footer-links__link">Готовые решения</a>
-					<a href="#" class="footer-links__link">Горки из нержавейки</a>
-					<a href="#" class="footer-links__link">Геопластика</a>
-					<a href="#" class="footer-links__link">Музыка и интерактив</a>
-					<a href="#" class="footer-links__link">Оптические иллюзии</a>
-					<a href="#" class="footer-links__link">Песочницы</a>
-				</div> -->
+				
 				<div class="col-12 col-sm-6 col-lg-3 footer-links__row">
 					<h4 class="footer-links__title">Подписаться на рассылку</h4>
 					<form action="#" method="post" class="footer-links__sending sending">
