--- a/src/html/catalog/catalog_product.html
+++ b/src/html/catalog/catalog_product.html
@@ -72,19 +72,19 @@
 
 						<div class="form-buy__item">
 							<label for="buyFormName">Ваше имя</label>
-							<input id="buyFormName" type="text" placeholder="Иван Смирнов">
+							<input id="buyFormName" class="_req" type="text" placeholder="Иван Смирнов" required>
 						</div>
 						<div class="form-buy__item">
 							<label for="buyFormEmail">Почта</label>
-							<input id="buyFormEmail" type="email" placeholder="hello@shelby.com">
+							<input id="buyFormEmail" class="_req" type="email" placeholder="hello@shelby.com" required>
 						</div>
 						<div class="form-buy__item">
 							<label for="buyFormTel">Телефон</label>
-							<input id="buyFormTel" type="tel" placeholder="+7 000 000 00 00">
+							<input id="buyFormTel" class="_req" type="tel" placeholder="+7 000 000 00 00" required>
 						</div>
 						<div class="form-buy__item">
 							<label for="buyFormOrgan">Название организации</label>
-							<input id="buyFormOrgan" type="text" placeholder="ООО Шелби Плэйс">
+							<input id="buyFormOrgan" class="_req" type="text" placeholder="ООО Шелби Плэйс" required>
 						</div>
 
 						<button type="submit" id="buyFormSubmit">Заказать</button>
