--- a/src/html/header.html
+++ b/src/html/header.html
@@ -54,12 +54,12 @@
 					<div class="header__item">
 						<h3 class="header__link">Контакты</h3>
 						<div class="header__second-list">
-							<a href="tel:+74993905007 " class="header__second-link" target="_blank">+7 (499) 390-50-07 </a>
-							<a href="mailto:hello@shelby-ltd.ru" class="header__second-link"
+							<a href="tel:+ " class="header__second-link" target="_blank">+7 (999) 999-99-99 </a>
+							<a href="mailto:" class="header__second-link"
 								target="_blank">hello@shelby-ltd.ru</a>
 							<a href="#" class="header__second-link">Заказать звонок</a>
-							<a href="https://wa.me/79258716516" class="header__second-link" target="_blank">WhatsApp</a>
-							<a href="https://t.me/shelbyplay" class="header__second-link" target="_blank">Telegram</a>
+							<a href="https://wa.me/" class="header__second-link" target="_blank">WhatsApp</a>
+							<a href="https://t.me/" class="header__second-link" target="_blank">Telegram</a>
 						</div>
 					</div>
 				</div>
