--- a/src/html/buttons.html
+++ b/src/html/buttons.html
@@ -9,7 +9,7 @@
 					<button id="callFormSubmit">Заказать звонок</button>
 				</div>
 				<div class="call__form-link">
-					<a href="tel:+74993905007">+7 (499) 390-50-07</a>
+					<a href="tel:+">+7 (999) 999-99-99</a>
 				</div>
 				<p class="call__form-agree">Нажимая на кнопку, вы даете согласие на обработку ваших персональных данных.</p>
 			</form>
